--- a/resources/lambda-permissions.yml
+++ b/resources/lambda-permissions.yml
@@ -3,7 +3,7 @@ Resources:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName: ${cf:${self:service}-${self:provider.stage}.SesForwarderLambdaFunctionQualifiedArn}
+      FunctionName: !Ref SesForwarderLambdaFunction
       Principal: ses.amazonaws.com
       SourceAccount: !Ref AWS::AccountId
 
