Modified forwarder to add SES ReceiptRule to named ReceiptRuleSet

--- a/env.example
+++ b/env.example
@@ -5,6 +5,13 @@
 #   in the serverless.yml.
 # 3 Make sure to not commit this file.
 
+# Default Configuration
 default:
-  s3:
-    bucketName: some-bucket
+
+  # Simple Email Service (SES)
+  ses:
+
+    # SES Rule Set Name
+    # Rule Set where the SES Rule should be added. This allow the SES Rule to
+    # be added to any existing Rule Set, including the Active Rule Set.
+    ruleSetName: default-rule-set
