--- a/resources/ses-rule.yml
+++ b/resources/ses-rule.yml
@@ -1,21 +1,17 @@
 Resources:
-  SesRuleSet:
-    Type: AWS::SES::ReceiptRuleSet
   SesS3Rule:
     Type: AWS::SES::ReceiptRule
     Properties:
-      Rule: 
+      Rule:
         Actions:
           - S3Action:
               BucketName: !Ref EmailsBucket
               ObjectKeyPrefix: emails
           - LambdaAction:
               FunctionArn: !GetAtt SesForwarderLambdaFunction.Arn
-      RuleSetName: !Ref SesRuleSet
-    
-Outputs:
-  SesRuleSetName:
-    Value:
-      Ref: SesRuleSet
-    
+              RuleSetName: ${self:custom.environment.ses.ruleSetName}
 
+Outputs:
+  SesRule:
+    Value:
+      Ref: SesS3Rule
