Moved SES Forwarder configuration to config.js

--- a/env.example
+++ b/env.example
@@ -1,8 +1,7 @@
 # HOW TO USE:
 #
 # 1 Add environment variables for the various stages here
-# 2 Rename this file to env.yml and uncomment it's usage
-#   in the serverless.yml.
+# 2 Rename this file to env.yml
 # 3 Make sure to not commit this file.
 
 # Default Configuration
